--- a/Linal_wk1/MainWindow.xaml
+++ b/Linal_wk1/MainWindow.xaml
@@ -6,10 +6,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Linal_wk1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="950" Width="900">
-    <Grid Margin="0,0,0,-51">
+        Title="MainWindow" Height="960" Width="1200">
+    <Grid Margin="0,0,-129,-51">
         <Canvas  Name="Assenstelsel" HorizontalAlignment="Center" VerticalAlignment="Center"
-          Width="800" Height="700" MouseLeftButtonDown="Assenstelsel_MouseLeftButtonDown" Margin="32,7,10,213">
+          Width="800" Height="700" MouseLeftButtonDown="Assenstelsel_MouseLeftButtonDown" Margin="59,42,462,238">
             <Canvas.LayoutTransform>
                 <ScaleTransform ScaleX="1" ScaleY="-1" CenterX=".5" CenterY=".5" />
             </Canvas.LayoutTransform>
@@ -28,16 +28,15 @@
                 </DrawingBrush>
             </Canvas.Background>
         </Canvas>
-        <Button x:Name="CreateVectors" Content="Create Vector" HorizontalAlignment="Left" Margin="148,890,0,0" VerticalAlignment="Top" Width="102" Click="CreateVectors_Click"/>
-        <Button x:Name="CreateMatrixes" Content="Create Matrix" HorizontalAlignment="Left" Margin="780,774,0,0" VerticalAlignment="Top" Width="102" RenderTransformOrigin="0.49,-0.15"/>
-        <Button x:Name="DeleteVectors" Content="Delete Vector" HorizontalAlignment="Left" Margin="326,890,0,0" VerticalAlignment="Top" Width="102" Click="DeleteVectors_Click" Height="23"/>
-        <Label x:Name="label" Content="Selected vector" HorizontalAlignment="Left" Margin="326,771,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="LabelLength" Content="{Binding Path=SelectedVector.Length, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Height="23" Margin="425,862,0,0" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-0.192,0.609"/>
-        <Label x:Name="label_Copy"  HorizontalAlignment="Left" Content="Length" Margin="324,862,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="labelScale"  HorizontalAlignment="Left" Content="ScaleX" Margin="326,803,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtScaleX" HorizontalAlignment="Left" Height="23" Margin="425,806,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="scaleVector" Content="Scale Vector" HorizontalAlignment="Left" Margin="540,890,0,0" VerticalAlignment="Top" Width="102" Height="23" Click="scaleVector_Click"/>
-        <Border CornerRadius="6" BorderBrush="Black" BorderThickness="2" Margin="19,774,573,52" >
+        <Button x:Name="CreateVectors" Content="Create Vector" HorizontalAlignment="Left" Margin="195,890,0,0" VerticalAlignment="Top" Width="102" Click="CreateVectors_Click"/>
+        <Button x:Name="DeleteVectors" Content="Delete Vector" HorizontalAlignment="Left" Margin="373,890,0,0" VerticalAlignment="Top" Width="102" Click="DeleteVectors_Click" Height="23"/>
+        <Label x:Name="label" Content="Selected vector" HorizontalAlignment="Left" Margin="373,771,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="LabelLength" Content="{Binding Path=SelectedVector.Length, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Height="23" Margin="472,862,0,0" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-0.192,0.609"/>
+        <Label x:Name="label_Copy"  HorizontalAlignment="Left" Content="Length" Margin="371,862,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="labelScale"  HorizontalAlignment="Left" Content="ScaleX" Margin="373,803,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtScaleX" HorizontalAlignment="Left" Height="23" Margin="472,806,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="scaleVector" Content="Scale Vector" HorizontalAlignment="Left" Margin="587,890,0,0" VerticalAlignment="Top" Width="102" Height="23" Click="scaleVector_Click"/>
+        <Border CornerRadius="6" BorderBrush="Black" BorderThickness="2" Margin="66,774,468,52" >
             <StackPanel Orientation="Vertical" Margin="0,0,-25,24">
                 <StackPanel Orientation="Horizontal">
                     <Label Content="X1:" Width="50" HorizontalAlignment="Left"/>
@@ -45,17 +44,16 @@
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Y1:" Width="50" HorizontalAlignment="Left"/>
-                    <TextBox Name="txtY1" Width="180" Text="{Binding Path=SelectedX2, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                    <TextBox Name="txtY1" Width="180" Text="{Binding Path=SelectedY1, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="DeltaX:" Width="50" HorizontalAlignment="Left"/>
-                    <TextBox Name="DeltaX" Width="180" Text="{Binding Path=SelectedY1, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                    <TextBox Name="DeltaX" Width="180" Text="{Binding Path=SelectedDeltaX, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="DeltaY:" Width="50" HorizontalAlignment="Left"/>
-                    <TextBox Name="DeltaY" Width="180" Text="{Binding Path=SelectedY2, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                    <TextBox Name="DeltaY" Width="180" Text="{Binding Path=SelectedDeltaY, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                 </StackPanel>
-
             </StackPanel>
 
         </Border>
@@ -63,12 +61,17 @@
         <Label x:Name="labelXLine2" HorizontalAlignment="Left" Margin="540,743,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label1" Content="0" HorizontalAlignment="Left" Margin="10,743,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.688,0.346"/>
         <Label x:Name="labelYLine" HorizontalAlignment="Left" Margin="10,33,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.688,0.346"/>
-        <Button x:Name="DeleteAllVectors" Content="Delete all Vectors" HorizontalAlignment="Left" Margin="433,890,0,0" VerticalAlignment="Top" Width="102" Height="23" Click="DeleteAllVectors_Click"/>
-        <Label x:Name="labelScale_Copy"  HorizontalAlignment="Left" Content="ScaleY" Margin="326,826,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtScaleY" HorizontalAlignment="Left" Height="23" Margin="425,829,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="AddVector" Content="Add Selected Vectors" HorizontalAlignment="Left" Margin="648,862,0,0" VerticalAlignment="Top" Width="140" Height="23" Click="AddVector_Click" />
-        <Button x:Name="DistractVector" Content="Distract selected Vectors" HorizontalAlignment="Left" Margin="647,890,0,0" VerticalAlignment="Top" Width="141" Height="23" Click="DistractVector_Click"/>
-
+        <Button x:Name="DeleteAllVectors" Content="Delete all Vectors" HorizontalAlignment="Left" Margin="480,890,0,0" VerticalAlignment="Top" Width="102" Height="23" Click="DeleteAllVectors_Click"/>
+        <Label x:Name="labelScale_Copy"  HorizontalAlignment="Left" Content="ScaleY" Margin="373,826,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtScaleY" HorizontalAlignment="Left" Height="23" Margin="472,829,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="AddVector" Content="Add Selected Vectors" HorizontalAlignment="Left" Margin="695,862,0,0" VerticalAlignment="Top" Width="140" Height="23" Click="AddVector_Click" />
+        <Button x:Name="DistractVector" Content="Distract selected Vectors" HorizontalAlignment="Left" Margin="694,890,0,0" VerticalAlignment="Top" Width="141" Height="23" Click="DistractVector_Click"/>
+        <Label x:Name="label2" Content="Vectors" HorizontalAlignment="Left" Margin="10,826,0,0" VerticalAlignment="Top"/>
+        <Border CornerRadius="6" BorderBrush="Black" BorderThickness="2" Margin="872,33,155,793" >
+            
+        </Border>
+        <Label x:Name="label2_Copy" Content="Matrixes" HorizontalAlignment="Left" Margin="872,2,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="CreateMatrixes" Content="Create Matrix" HorizontalAlignment="Left" Margin="88,890,0,0" VerticalAlignment="Top" Width="102" RenderTransformOrigin="0.49,-0.15" Click="CreateMatrixes_Click"/>
 
     </Grid>
 </Window>
