--- a/Linal_wk1/MainWindow.xaml
+++ b/Linal_wk1/MainWindow.xaml
@@ -67,10 +67,38 @@
         <Button x:Name="AddVector" Content="Add Selected Vectors" HorizontalAlignment="Left" Margin="695,862,0,0" VerticalAlignment="Top" Width="140" Height="23" Click="AddVector_Click" />
         <Button x:Name="DistractVector" Content="Distract selected Vectors" HorizontalAlignment="Left" Margin="694,890,0,0" VerticalAlignment="Top" Width="141" Height="23" Click="DistractVector_Click"/>
         <Label x:Name="label2" Content="Vectors" HorizontalAlignment="Left" Margin="10,826,0,0" VerticalAlignment="Top"/>
-        <Border CornerRadius="6" BorderBrush="Black" BorderThickness="2" Margin="872,33,155,793" >
-            
+        <Border CornerRadius="6" BorderBrush="Black" BorderThickness="2" Margin="872,33,201,719" >
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Left" Width="236" Margin="0,0,0,8">
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="X1:"></Label>
+                    <TextBox Text="{Binding Path=SelectedMatrix.xPos}" Width="200"></TextBox>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Y1:"></Label>
+                    <TextBox Text="{Binding Path=SelectedMatrix.yPos}" Width="200"></TextBox>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="DeltaX:"></Label>
+                    <TextBox Text="{Binding Path=SelectedMatrix.deltaX}" Width="179"></TextBox>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="DeltaY:"></Label>
+                    <TextBox Text="{Binding Path=SelectedMatrix.deltaY}" Width="179"></TextBox>
+                </StackPanel>
+                <Label>scale:</Label>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="scaleX:"></Label>
+                    <TextBox Name="scaleMatrixX" Width="179"></TextBox>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="scaleY:"></Label>
+                    <TextBox Name="scaleMatrixY" Width="180"></TextBox>
+                </StackPanel>
+                <Button Content="Scale Matrix" Name="scaleMatrix" Click="scaleMatrix_Click"/>
+
+            </StackPanel>
         </Border>
-        <Label x:Name="label2_Copy" Content="Matrixes" HorizontalAlignment="Left" Margin="872,2,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label2_Copy" Content="Selected Matrix" HorizontalAlignment="Left" Margin="872,2,0,0" VerticalAlignment="Top"/>
         <Button x:Name="CreateMatrixes" Content="Create Matrix" HorizontalAlignment="Left" Margin="88,890,0,0" VerticalAlignment="Top" Width="102" RenderTransformOrigin="0.49,-0.15" Click="CreateMatrixes_Click"/>
 
     </Grid>
